third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul/union.rs
#[derive(derive_more::Mul)]
union IntOrFloat {
    i: u32,
}

#[derive(derive_more::Mul)]
#[mul(forward)]
union Float {
    f: f32,
}

fn main() {}
